Compilation/test/invalides/test4.tpc
/* test-table-symboles.tpc */

/* Test file for simplified translator of a declaration of variables in C */
int r1,b,s,c,r2;
char letter, digit, punct;
char dac;

int test(int ok, int dac){
	dac = 1;
	return 1;
}

int main(void){
  int dac;
  ok = 3;
  r2=24;
  b=r1+r2;
  punct='.';
  return b;
}
